--- a/src/main/resources/templates/admin/lms/exam/list.html
+++ b/src/main/resources/templates/admin/lms/exam/list.html
@@ -94,6 +94,10 @@
             }
         });
 
+        form.on('switch(status)', function (obj) {
+            modifyReq('/admin/lms/exam/subject/setState', {id: obj.value}, false);
+        });
+
         form.on('submit(search)', function (form) {
             treeTable.reload('table-list', {
                 where: form.field
