--- a/src/main/resources/templates/admin/lms/exam/logs.html
+++ b/src/main/resources/templates/admin/lms/exam/logs.html
@@ -38,7 +38,7 @@
             cols: [ [
                 {type: 'checkbox'},
                 {field: 'examRoomName', title: '答题室名', minWidth: 80},
-                {field: 'userName', title: '用户名', minWidth: 80},
+                {field: 'username', title: '用户名', minWidth: 80},
                 {field: 'score', title: '得分', minWidth: 80},
                 {field: 'timeOn', title: '开始时间', minWidth: 80},
                 {field: 'timeOff', title: '结束时间', minWidth: 80},
