--- a/src/main/resources/templates/admin/lms/exam/rooms.html
+++ b/src/main/resources/templates/admin/lms/exam/rooms.html
@@ -54,7 +54,7 @@
             cols: [ [
                 {type: 'checkbox', fixed: 'left'},
                 {field: 'subjectName', title: '业务分类', minWidth: 100, fixed: 'left'},
-                {field: 'name', title: '答题室标题', width: 100, fixed: 'left'},
+                {field: 'title', title: '答题室标题', width: 100, fixed: 'left'},
                 {field: 'enabled', title: '答题室状态', width: 100},
                 {field: 'examMode', title: '答卷模式', width: 100},
                 {field: 'timeMode', title: '时间类型', width: 120,templet: function (d) {return d.timeMode ? "限时" : "永久";}},
