--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -30,6 +30,29 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
+.room-header {
+    background: #E2E2E2;
+    color: black;
+}
+
+.room-right {
+    float: right;
+    color: #FFF;
+}
+
+.comments-icon {
+    overflow: hidden;
+    float: left;
+    margin-top: 4px;
+}
+
+.comments-icon .layui-icon {
+    font-size: 24px;
+    line-height: 30px;
+    margin-right: 15px;
+    color: #C4CBCF;
+}
+
 .footer {
     background-color: #2c3e50;
     color: #fff;
